--- a/data_overview.ipynb
+++ b/data_overview.ipynb
@@ -1557,6 +1557,383 @@
    "source": [
     "tr_y[tr_y.label==-1]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_has_label = feather.read_dataframe('data/train_has_label.f')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(990006, 300)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_has_label = train_has_label.sample(frac=1)\n",
+    "train_has_label.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(198000, 300)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train1 = train_has_label[:198000]\n",
+    "train1.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(198000, 300)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train2 = train_has_label[198000:396000]\n",
+    "train2.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(198000, 300)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train3 = train_has_label[396000:594000]\n",
+    "train3.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(198000, 300)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train4 = train_has_label[594000:792000]\n",
+    "train4.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(198006, 300)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train5 = train_has_label[792000:]\n",
+    "train5.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "feather.write_dataframe(train1.drop(columns=['label']), 'data/tr1_x.f')\n",
+    "feather.write_dataframe(train1[['label']], 'data/tr1_y.f')\n",
+    "feather.write_dataframe(train2.drop(columns=['label']), 'data/tr2_x.f')\n",
+    "feather.write_dataframe(train2[['label']], 'data/tr2_y.f')\n",
+    "feather.write_dataframe(train3.drop(columns=['label']), 'data/tr3_x.f')\n",
+    "feather.write_dataframe(train3[['label']], 'data/tr3_y.f')\n",
+    "feather.write_dataframe(train4.drop(columns=['label']), 'data/tr4_x.f')\n",
+    "feather.write_dataframe(train4[['label']], 'data/tr4_y.f')\n",
+    "feather.write_dataframe(train5.drop(columns=['label']), 'data/tr5_x.f')\n",
+    "feather.write_dataframe(train5[['label']], 'data/tr5_y.f')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>date</th>\n",
+       "      <th>f1</th>\n",
+       "      <th>f2</th>\n",
+       "      <th>f3</th>\n",
+       "      <th>f4</th>\n",
+       "      <th>f5</th>\n",
+       "      <th>f6</th>\n",
+       "      <th>f7</th>\n",
+       "      <th>f8</th>\n",
+       "      <th>...</th>\n",
+       "      <th>f288</th>\n",
+       "      <th>f289</th>\n",
+       "      <th>f290</th>\n",
+       "      <th>f291</th>\n",
+       "      <th>f292</th>\n",
+       "      <th>f293</th>\n",
+       "      <th>f294</th>\n",
+       "      <th>f295</th>\n",
+       "      <th>f296</th>\n",
+       "      <th>f297</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>d5a4c8ba43cc110911a88bdb9ad7408d45e5b2342ca5a3...</td>\n",
+       "      <td>20171007</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2512f0f243f466c00c32877851a6286a2df13ee3a1924c...</td>\n",
+       "      <td>20170906</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>100610.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>a5c96d194b3651eb9b9771d3bb01107fe66fbfec3b3039...</td>\n",
+       "      <td>20171027</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>100806.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>301.0</td>\n",
+       "      <td>301.0</td>\n",
+       "      <td>302.0</td>\n",
+       "      <td>91.0</td>\n",
+       "      <td>301.0</td>\n",
+       "      <td>189.0</td>\n",
+       "      <td>189.0</td>\n",
+       "      <td>189.0</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>188.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>f4d2130a40d9f7d1b26c1dcf678bf0cd9630c40789e3e0...</td>\n",
+       "      <td>20171001</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>301.0</td>\n",
+       "      <td>301.0</td>\n",
+       "      <td>302.0</td>\n",
+       "      <td>134.0</td>\n",
+       "      <td>301.0</td>\n",
+       "      <td>210.0</td>\n",
+       "      <td>211.0</td>\n",
+       "      <td>211.0</td>\n",
+       "      <td>104.0</td>\n",
+       "      <td>210.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>57093e377e08b781f75cf20d4d22bebd2f5f612bda182c...</td>\n",
+       "      <td>20171102</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 299 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                  id      date  f1  f2  f3  \\\n",
+       "0  d5a4c8ba43cc110911a88bdb9ad7408d45e5b2342ca5a3...  20171007   2   0   2   \n",
+       "1  2512f0f243f466c00c32877851a6286a2df13ee3a1924c...  20170906   1   1   0   \n",
+       "2  a5c96d194b3651eb9b9771d3bb01107fe66fbfec3b3039...  20171027   0   0   0   \n",
+       "3  f4d2130a40d9f7d1b26c1dcf678bf0cd9630c40789e3e0...  20171001   1   0   2   \n",
+       "4  57093e377e08b781f75cf20d4d22bebd2f5f612bda182c...  20171102   2   0   1   \n",
+       "\n",
+       "   f4        f5  f6  f7  f8  ...     f288   f289   f290   f291   f292   f293  \\\n",
+       "0   2       NaN   3   1   2  ...      NaN    NaN    NaN    NaN    NaN    NaN   \n",
+       "1   0  100610.0   1   6   1  ...      3.0    2.0    3.0    1.0    3.0    2.0   \n",
+       "2   1  100806.0   0   4   1  ...    301.0  301.0  302.0   91.0  301.0  189.0   \n",
+       "3   1       NaN   1   3   1  ...    301.0  301.0  302.0  134.0  301.0  210.0   \n",
+       "4   0       NaN   1   3   1  ...      NaN    NaN    NaN    NaN    NaN    NaN   \n",
+       "\n",
+       "    f294   f295   f296   f297  \n",
+       "0    NaN    NaN    NaN    NaN  \n",
+       "1    1.0    2.0    1.0    2.0  \n",
+       "2  189.0  189.0   64.0  188.0  \n",
+       "3  211.0  211.0  104.0  210.0  \n",
+       "4    NaN    NaN    NaN    NaN  \n",
+       "\n",
+       "[5 rows x 299 columns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tr1_x = feather.read_dataframe('data/tr1_x.f')\n",
+    "tr1_x.head()"
+   ]
   }
  ],
  "metadata": {
